# bl0ck

./: .gitignore  Caddyfile  Cargo.toml  README.md  build.rs  index.html  justfile
.nova/: Configuration.json
.nova/Publishing/: J0.lol.json
.nova/Tasks/: Cargo.json  Run Release.json  WASM (release).json
blender/: cube.blend  cube.blend1
res/: blender_default_cube.mtl  blender_default_cube.obj.annotated
src/: app.rs  camera.rs  concurrency.rs  gfx.rs  gui.rs  lib.rs  light.wgsl  main.rs  map.rs  model.rs  resources.rs  shader.wgsl  shadows.wgsl  texture.rs  world.rs
src/app/: gfx_state.rs
src/gfx/: camera.rs  light.rs  model.rs  primitive.rs  resources.rs  texture.rs
src/world/: chunk.rs  encoded.rs  map.rs
