[package]
name = "bl0ck"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.29", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "22.0"
cfg-if = "1"
wasm-bindgen = "0.2.93"
web-sys = "0.3.70"
pollster = "0.3.0"
bytemuck = { version = "1.18.0", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png", "jpeg"] }
thiserror = "2.0.11"
glam = { version = "0.29.2", features = ["bytemuck"] }
tobj = { version = "4", default-features = false, features = ["async"] }
futures = "0.3.31"
itertools = "0.14.0"

[build-dependencies]
fs_extra = "1.3.0"
glob = "0"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
]}
reqwest = "0.11"
