[package]
name = "bl0ck"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "0.30" }
env_logger = "0.11"
log = "0.4"
wgpu = "24"
cfg-if = "1"
wasm-bindgen = "0.2"
web-sys = "0.3"
pollster = "0.4"
bytemuck = { version = "1.18", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
glam = { version = "0.29", features = ["bytemuck"] }
tobj = { version = "4", default-features = false, features = ["async"] }
futures = "0.3"
itertools = "0.14"
egui = "0.31"
egui-wgpu = "0.31"
egui-winit = { version = "0.31", default-features = false }
bincode = "2.0.0-RC.3"
instant = "0.1"
rollgrid = "3"
base64 = "0.22.1"

[build-dependencies]
fs_extra = "1.3"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.9.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24", features = ["webgl"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Location",
    "Storage"
] }
reqwest = "0.12"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
